Fixed footer(Not Sticky), Updated About Us Photos, Updated maps Location, Fixed dark mode, Updated fitness

--- a/4214_Midterm/css/styles.css
+++ b/4214_Midterm/css/styles.css
@@ -26,3 +26,18 @@ body.dark-mode {
   height: 180px;
   object-fit: cover;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+main {
+  flex: 1;
+}
+
